; ModuleID = '/home/carl/AnghaBench/git/extr_unix-socket.c_unix_sockaddr_cleanup.c'
source_filename = "/home/carl/AnghaBench/git/extr_unix-socket.c_unix_sockaddr_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unix_sockaddr_context = type { i32 }

@.str = private unnamed_addr constant [45 x i8] c"unable to restore original working directory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.unix_sockaddr_context*)* @unix_sockaddr_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unix_sockaddr_cleanup(%struct.unix_sockaddr_context* %0) #0 {
  %2 = alloca %struct.unix_sockaddr_context*, align 8
  store %struct.unix_sockaddr_context* %0, %struct.unix_sockaddr_context** %2, align 8
  %3 = load %struct.unix_sockaddr_context*, %struct.unix_sockaddr_context** %2, align 8
  %4 = getelementptr inbounds %struct.unix_sockaddr_context, %struct.unix_sockaddr_context* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %21

8:                                                ; preds = %1
  %9 = load %struct.unix_sockaddr_context*, %struct.unix_sockaddr_context** %2, align 8
  %10 = getelementptr inbounds %struct.unix_sockaddr_context, %struct.unix_sockaddr_context* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @chdir(i32 %11)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = call i32 @die(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %8
  %17 = load %struct.unix_sockaddr_context*, %struct.unix_sockaddr_context** %2, align 8
  %18 = getelementptr inbounds %struct.unix_sockaddr_context, %struct.unix_sockaddr_context* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @free(i32 %19)
  br label %21

21:                                               ; preds = %16, %7
  ret void
}

declare dso_local i64 @chdir(i32) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
